			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04g: *********************************

BUG: (3/14/06, GVG) "Mark All Libraries for saving" command was not wrapped in a job (Bug #872)
FIX: New Job class added.

BUG: (3/14/06, DN) TerminateOK is executed after failure of EXAMINE Job (Bug #825)
FIX: Serialize and deserialize result for examine Jobs too. 

BUG: (3/14/06, GVG) Problem highlighting networks (Bug #871). getHighlightedNetworks returns null if varKey != null.
FIX: condition removed since that condition doesn't hold after HighlightText and Export changes.

IMP: (3/13/06, GVG) Ability to mark selected cell if you do "Edit in New Window" (Bug #864)

IMP: (3/13/06, RK) NCC: delete initial version of local wire paritioning code.

IMP/MAN: (3/13/06, GVG) Multiple selection in cross library copy (Bug #867)

BUG: (3/13/06, GVG) Date/Content in CrossLibCopy dialog was not filled if "Date/Content" toggle
is selected (Bug #869).
FIX: Call showCells function. Side effect: message between "()" only if content is compared otherwise
doesn't have sense.

IMP/MAN: (3/12/06, GVG) Ability to set MaxPermSize option as preference (Bug #866)
If value is zero, then doesn't set anything. New item in General Tab.

IMP/MAN: (3/12/06, GVG) Make saving last DRC date with libraries an option (Bug #847).
New flag in DRC tab.

IMP/MAN: (3/10/06, JKG) Added DELIB file format. This is a just a distributed
    JELIB format, where each cell has it's own file. This will be used for
    CVS version control of cells.

BUG: (3/9/06, GVG) Bug in DRC after fixing Bug #507 (no detecting well good drc date in goodDRC.put())
FIX: Compare DRC date with revision date (must be newer).

BUG: (3/9/06, DN) GUI thread sometimes calls Cell.getTechnology before "tech" field is initialized (Bug #859).
FIX: In NodeInst.newInstance call subCell.getTechnology() to initialize "tech" field.
