@@ -25,6 +25,7 @@ package com.sun.electric.tool.user.ui;
 
 import com.sun.electric.database.hierarchy.Cell;
 import com.sun.electric.database.variable.VarContext;
+import com.sun.electric.database.text.TextUtils;
 import com.sun.electric.tool.user.Highlighter;
 import com.sun.electric.tool.user.dialogs.FindText;
 import java.awt.image.BufferedImage;
@@ -46,7 +47,7 @@ public interface WindowContent
 	 * @param caseSensitive true to match only where the case is the same.
 	 */
 	public abstract void initTextSearch(String search, boolean caseSensitive,
-	                                    boolean regExp, Set<FindText.WhatToSearch> whatToSearch);
+	                                    boolean regExp, Set<TextUtils.WhatToSearch> whatToSearch);
 
 	/**
 	 * Method to find the next occurrence of a string.
