@@ -666,7 +666,7 @@ public class WaveformWindow implements WindowContent, PropertyChangeListener
 	 * @param caseSensitive true to match only where the case is the same.
 	 */
 	public void initTextSearch(String search, boolean caseSensitive,
-		boolean regExp, Set<FindText.WhatToSearch> whatToSearch)
+		boolean regExp, Set<TextUtils.WhatToSearch> whatToSearch)
 	{
 		System.out.println("Text search not implemented for waveform windows");
 	}
